# branca

./: .appveyor.yml  .buildinfo  .doctr-files  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGES.txt  MANIFEST.in  Makefile  README.md  README.rst  colormap.html  element.html  genindex.html  github_deploy_key_python_visualization_branca.enc  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  versioneer.py
.github/workflows/: deploy-docs.yml  publish.yml  pypi.yml  test_code.yml  test_code_notebooks.yml  test_mypy.yml  test_selenium.yml  test_tarball.yml
_modules/: index.html
_modules/branca/: colormap.html  element.html
_sources/: colormap.rst.txt  element.rst.txt  index.rst.txt
_static/: documentation_options.js
branca/: __init__.py  _cnames.json  _schemes.json  _version.py  colormap.py  element.py  scheme_base_codes.json  scheme_info.json  text.py  utilities.py
branca/plugins/: __init__.py
branca/templates/: color_scale.js
docs/: index.rst
docs/source/: colormap.rst  conf.py  element.rst
examples/: Custom_colormap.ipynb  Elements.ipynb
tests/: test_colormap.py  test_colormap_parse.py  test_iframe.py  test_notebooks.py  test_utilities.py
