# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = branca/_version.py
versionfile_build = branca/_version.py
tag_prefix = v
parentdir_prefix =

[tool:pytest]
flake8-max-line-length = 105
flake8-ignore =
    docs/* ALL
    versioneer.py ALL
    branca/_version.py ALL
markers =
    headless: mark headless tests (deselect with '-m "not headless"')

[metadata]
description-file = README.rst
license_file = LICENSE.txt

[check-manifest]
ignore = 
    .*.yml
    .coveragerc
    Makefile
    docs
    docs/*
    *.enc
    examples
    examples/*
    tests
    tests/*
