[tool:pytest]
flake8-max-line-length = 105
flake8-ignore =
    docs/* ALL
    versioneer.py ALL
    branca/_version.py ALL
markers =
    headless: mark headless tests (deselect with '-m "not headless"')

[metadata]
long_description = README.md
license_files = LICENSE.txt

[check-manifest]
ignore =
    .*.yml
    .coveragerc
    docs
    docs/*
    examples
    examples/*
    tests
    tests/*
